# pygeofilter

./: .bumpversion.cfg  .env  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile-3.9  LICENSE  MANIFEST.in  README.md  SECURITY.md  bullseye-3.9.Dockerfile  docker-compose.test.yml  docker-compose.yml  execute-tests.sh  requirements-base.txt  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  simple-test.py  tox.ini
.github/workflows/: main.yml  publish.yml  release-please.yml
debian/: changelog  control  copyright  rules
docker/test/: bullseye.Dockerfile
docs/: conf.py  index.rst  installation.rst  introduction.rst  license.rst  make.bat  requirements.txt  usage.rst
docs/api/: ast.rst  index.rst  lexer.rst  main.rst  parser.rst  util.rst  values.rst
examples/: cql2.ipynb  test-solr-queries.py
pygeofilter/: __init__.py  ast.py  cli.py  cql2.py  evaluator.py  util.py  values.py
pygeofilter/backends/: evaluator.py  optimize.py
pygeofilter/backends/cql/: __init__.py  evaluate.py
pygeofilter/backends/cql2_json/: __init__.py  evaluate.py
pygeofilter/examples/: cql2.ipynb
pygeofilter/frontends/: abc.py  cql2.py  iso8601.lark  iso8601.py
pygeofilter/parsers/: iso8601.lark  iso8601.py  spatiotemporal.lark  wkt.lark  wkt.py
tests/: execute-tests.sh  test_optimize.py  test_utils.py
tests/native/: test_evaluate.py
tests/sqlalchemy_test/: tests.py
tests/test_geopandas/: test_evaluate.py
tests/test_sql/: test_evaluate.py
workflows/: main.yml
(+108 files in other folders)
