[metadata]
version = attr: pygeofilter.version.__version__

######################################################
# code formating / lint / type checking configurations
[isort]
profile = black
default_section = THIRDPARTY

[flake8]
ignore = E501,W503,E203
exclude = .git,__pycache__,docs/conf.py,old,build,dist
max-complexity = 12
max-line-length = 80

[mypy]
ignore_missing_imports = True
